5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4384/executions/1692_1105.log
== TEST (2019-04-30 23:57:53) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
casa=input("brasao:")
print("Entrada:",casa)
if (casa==lobo)or(casa==leao)or(casa==veado)or(casa==dragao)or(casa==rosa)or(casa==sol)or(casa==lula)or(casa==esfolado)or(casa==turta):
	elif (casa==lobo):
	print("Casa: Stark")
	elif (casa==leao):
	print("Casa: Lannister")
	elif (casa==veado):
	print("Casa: Baratheon")
	elif (casa==dragao):
	print("Casa: Targaryen")
	elif (casa==rosa):
	print("Casa: Tyrell")
	elif (casa==sol):
	print("Casa: Maetell")
	elif (casa==lula):
	print("Casa: Greyjoy")
	elif (casa==esfolado):
	print("Casa: Bolton")
	elif (casa==turta):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
File "XXXX", line 6
    elif (casa==lobo):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 23:58:55) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
casa=input("brasao:")
print("Entrada:",casa)
if (casa==lobo)or(casa==leao)or(casa==veado)or(casa==dragao)or(casa==rosa)or(casa==sol)or(casa==lula)or(casa==esfolado)or(casa==turta):
	elif (casa==lobo):
		print("Casa: Stark")
	elif (casa==leao):
		print("Casa: Lannister")
	elif (casa==veado):
		print("Casa: Baratheon")
	elif (casa==dragao):
		print("Casa: Targaryen")
	elif (casa==rosa):
		print("Casa: Tyrell")
	elif (casa==sol):
		print("Casa: Maetell")
	elif (casa==lula):
		print("Casa: Greyjoy")
	elif (casa==esfolado):
		print("Casa: Bolton")
	elif (casa==turta):
		print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
File "XXXX", line 6
    elif (casa==lobo):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 23:59:22) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
casa=input("brasao:")
print("Entrada:",casa)
if (casa==lobo)or(casa==leao)or(casa==veado)or(casa==dragao)or(casa==rosa)or(casa==sol)or(casa==lula)or(casa==esfolado)or(casa==turta):
	if (casa==lobo):
		print("Casa: Stark")
	elif (casa==leao):
		print("Casa: Lannister")
	elif (casa==veado):
		print("Casa: Baratheon")
	elif (casa==dragao):
		print("Casa: Targaryen")
	elif (casa==rosa):
		print("Casa: Tyrell")
	elif (casa==sol):
		print("Casa: Maetell")
	elif (casa==lula):
		print("Casa: Greyjoy")
	elif (casa==esfolado):
		print("Casa: Bolton")
	elif (casa==turta):
		print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (casa==lobo)or(casa==leao)or(casa==veado)or(casa==dragao)or(casa==rosa)or(casa==sol)or(casa==lula)or(casa==esfolado)or(casa==turta):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 00:00:33) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
casa=input("brasao:")
print("Entrada:",casa)
if (casa==lobo)or(casa==leao)or(casa==veado)or(casa==dragao)or(casa==rosa)or(casa==sol)or(casa==lula)or(casa==esfolado)or(casa==turta):
	if (casa==lobo):
		print("Casa: Stark")
	elif (casa==leao):
		print("Casa: Lannister")
	elif (casa==veado):
		print("Casa: Baratheon")
	elif (casa==dragao):
		print("Casa: Targaryen")
	elif (casa==rosa):
		print("Casa: Tyrell")
	elif (casa==sol):
		print("Casa: Maetell")
	elif (casa==lula):
		print("Casa: Greyjoy")
	elif (casa==esfolado):
		print("Casa: Bolton")
	elif (casa==turta):
		print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (casa==lobo)or(casa==leao)or(casa==veado)or(casa==dragao)or(casa==rosa)or(casa==sol)or(casa==lula)or(casa==esfolado)or(casa==turta):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 00:01:30) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
casa=input("brasao:")
print("Entrada:",casa)
if (casa=lobo)or(casa=leao)or(casa=veado)or(casa=dragao)or(casa=rosa)or(casa=sol)or(casa=lula)or(casa=esfolado)or(casa=turta):
	if (casa==lobo):
		print("Casa: Stark")
	elif (casa==leao):
		print("Casa: Lannister")
	elif (casa==veado):
		print("Casa: Baratheon")
	elif (casa==dragao):
		print("Casa: Targaryen")
	elif (casa==rosa):
		print("Casa: Tyrell")
	elif (casa==sol):
		print("Casa: Maetell")
	elif (casa==lula):
		print("Casa: Greyjoy")
	elif (casa==esfolado):
		print("Casa: Bolton")
	elif (casa==turta):
		print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
File "XXXX", line 5
    if (casa=lobo)or(casa=leao)or(casa=veado)or(casa=dragao)or(casa=rosa)or(casa=sol)or(casa=lula)or(casa=esfolado)or(casa=turta):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 00:01:34) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
casa=input("brasao:")
print("Entrada:",casa)
if (casa=lobo)or(casa=leao)or(casa=veado)or(casa=dragao)or(casa=rosa)or(casa=sol)or(casa=lula)or(casa=esfolado)or(casa=turta):
	if (casa==lobo):
		print("Casa: Stark")
	elif (casa==leao):
		print("Casa: Lannister")
	elif (casa==veado):
		print("Casa: Baratheon")
	elif (casa==dragao):
		print("Casa: Targaryen")
	elif (casa==rosa):
		print("Casa: Tyrell")
	elif (casa==sol):
		print("Casa: Maetell")
	elif (casa==lula):
		print("Casa: Greyjoy")
	elif (casa==esfolado):
		print("Casa: Bolton")
	elif (casa==turta):
		print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
File "XXXX", line 5
    if (casa=lobo)or(casa=leao)or(casa=veado)or(casa=dragao)or(casa=rosa)or(casa=sol)or(casa=lula)or(casa=esfolado)or(casa=turta):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 00:02:04) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
casa=input("brasao:")
print("Entrada:",casa)
if (casa==lobo)or(casa==leao)or(casa==veado)or(casa==dragao)or(casa==rosa)or(casa==sol)or(casa==lula)or(casa==esfolado)or(casa==turta):
	if (casa==lobo):
		print("Casa: Stark")
	elif (casa==leao):
		print("Casa: Lannister")
	elif (casa==veado):
		print("Casa: Baratheon")
	elif (casa==dragao):
		print("Casa: Targaryen")
	elif (casa==rosa):
		print("Casa: Tyrell")
	elif (casa==sol):
		print("Casa: Maetell")
	elif (casa==lula):
		print("Casa: Greyjoy")
	elif (casa==esfolado):
		print("Casa: Bolton")
	elif (casa==turta):
		print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (casa==lobo)or(casa==leao)or(casa==veado)or(casa==dragao)or(casa==rosa)or(casa==sol)or(casa==lula)or(casa==esfolado)or(casa==turta):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 00:02:46) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
casa=input("brasao:")
print("Entrada:",casa)
if (casa==ou)or(casa==leao)or(casa==veado)or(casa==dragao)or(casa==rosa)or(casa==sol)or(casa==lula)or(casa==esfolado)or(casa==turta):
	if (casa==ou):
		print("Casa: Stark")
	elif (casa==leao):
		print("Casa: Lannister")
	elif (casa==veado):
		print("Casa: Baratheon")
	elif (casa==dragao):
		print("Casa: Targaryen")
	elif (casa==rosa):
		print("Casa: Tyrell")
	elif (casa==sol):
		print("Casa: Maetell")
	elif (casa==lula):
		print("Casa: Greyjoy")
	elif (casa==esfolado):
		print("Casa: Bolton")
	elif (casa==turta):
		print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (casa==ou)or(casa==leao)or(casa==veado)or(casa==dragao)or(casa==rosa)or(casa==sol)or(casa==lula)or(casa==esfolado)or(casa==turta):
NameError: name 'ou' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 00:22:02) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
casa=input("brasao:")
print("Entrada:",casa)
if (casa=="lobo")or(casa=="leao")or(casa=="veado")or(casa=="dragao")or(casa=="rosa")or(casa=="sol")or(casa=="lula")or(casa=="esfolado"")or(casa=="turta"):
	if (casa=="lobo"):
		print("Casa: Stark")
	elif (casa=="leao"):
		print("Casa: Lannister")
	elif (casa=="veado"):
		print("Casa: Baratheon")
	elif (casa=="dragao"):
		print("Casa: Targaryen")
	elif (casa=="rosa"):
		print("Casa: Tyrell")
	elif (casa=="sol"):
		print("Casa: Maetell")
	elif (casa=="lula"):
		print("Casa: Greyjoy")
	elif (casa=="esfolado"):
		print("Casa: Bolton")
	elif (casa=="turta"):
		print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
File "XXXX", line 5
    if (casa=="lobo")or(casa=="leao")or(casa=="veado")or(casa=="dragao")or(casa=="rosa")or(casa=="sol")or(casa=="lula")or(casa=="esfolado"")or(casa=="turta"):
                                                                                                                                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 00:22:03) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
casa=input("brasao:")
print("Entrada:",casa)
if (casa=="lobo")or(casa=="leao")or(casa=="veado")or(casa=="dragao")or(casa=="rosa")or(casa=="sol")or(casa=="lula")or(casa=="esfolado"")or(casa=="turta"):
	if (casa=="lobo"):
		print("Casa: Stark")
	elif (casa=="leao"):
		print("Casa: Lannister")
	elif (casa=="veado"):
		print("Casa: Baratheon")
	elif (casa=="dragao"):
		print("Casa: Targaryen")
	elif (casa=="rosa"):
		print("Casa: Tyrell")
	elif (casa=="sol"):
		print("Casa: Maetell")
	elif (casa=="lula"):
		print("Casa: Greyjoy")
	elif (casa=="esfolado"):
		print("Casa: Bolton")
	elif (casa=="turta"):
		print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
File "XXXX", line 5
    if (casa=="lobo")or(casa=="leao")or(casa=="veado")or(casa=="dragao")or(casa=="rosa")or(casa=="sol")or(casa=="lula")or(casa=="esfolado"")or(casa=="turta"):
                                                                                                                                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 00:22:14) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
casa=input("brasao:")
print("Entrada:",casa)
if (casa=="lobo")or(casa=="leao")or(casa=="veado")or(casa=="dragao")or(casa=="rosa")or(casa=="sol")or(casa=="lula")or(casa=="esfolado"")or(casa=="turta"):
	if (casa=="lobo"):
		print("Casa: Stark")
	elif (casa=="leao"):
		print("Casa: Lannister")
	elif (casa=="veado"):
		print("Casa: Baratheon")
	elif (casa=="dragao"):
		print("Casa: Targaryen")
	elif (casa=="rosa"):
		print("Casa: Tyrell")
	elif (casa=="sol"):
		print("Casa: Maetell")
	elif (casa=="lula"):
		print("Casa: Greyjoy")
	elif (casa=="esfolado"):
		print("Casa: Bolton")
	elif (casa=="turta"):
		print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
File "XXXX", line 5
    if (casa=="lobo")or(casa=="leao")or(casa=="veado")or(casa=="dragao")or(casa=="rosa")or(casa=="sol")or(casa=="lula")or(casa=="esfolado"")or(casa=="turta"):
                                                                                                                                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 00:46:29) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
casa=input("brasao:")
print("Entrada:",casa)
if (casa==lobo)or(casa==leao)or(casa==veado)or(casa==dragao)or(casa==rosa)or(casa==sol)or(casa==lula)or(casa==esfolado)or(casa==turta):
	if (casa==lobo):
		print("Casa: Stark")
	elif (casa==leao):
		print("Casa: Lannister")
	elif (casa==veado):
		print("Casa: Baratheon")
	elif (casa==dragao):
		print("Casa: Targaryen")
	elif (casa==rosa):
		print("Casa: Tyrell")
	elif (casa==sol):
		print("Casa: Maetell")
	elif (casa==lula):
		print("Casa: Greyjoy")
	elif (casa==esfolado):
		print("Casa: Bolton")
	elif (casa==turta):
		print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (casa==lobo)or(casa==leao)or(casa==veado)or(casa==dragao)or(casa==rosa)or(casa==sol)or(casa==lula)or(casa==esfolado)or(casa==turta):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 00:47:36) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
casa=input("brasao:")
print("Entrada:",casa)
if (casa=="lobo")or(casa=="leao")or(casa=="veado")or(casa=="dragao")or(casa=="rosa")or(casa=="sol")or(casa=="lula")or(casa=="esfolado")or(casa=="turta"):
	if (casa==lobo):
		print("Casa: Stark")
	elif (casa==leao):
		print("Casa: Lannister")
	elif (casa==veado):
		print("Casa: Baratheon")
	elif (casa==dragao):
		print("Casa: Targaryen")
	elif (casa==rosa):
		print("Casa: Tyrell")
	elif (casa==sol):
		print("Casa: Maetell")
	elif (casa==lula):
		print("Casa: Greyjoy")
	elif (casa==esfolado):
		print("Casa: Bolton")
	elif (casa==turta):
		print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if (casa==lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 00:47:49) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
casa=input("brasao:")
print("Entrada:",casa)
if (casa=="lobo")or(casa=="leao")or(casa=="veado")or(casa=="dragao")or(casa=="rosa")or(casa=="sol")or(casa=="lula")or(casa=="esfolado")or(casa=="turta"):
	if (casa==lobo):
		print("Casa: Stark")
	elif (casa==leao):
		print("Casa: Lannister")
	elif (casa==veado):
		print("Casa: Baratheon")
	elif (casa==dragao):
		print("Casa: Targaryen")
	elif (casa==rosa):
		print("Casa: Tyrell")
	elif (casa==sol):
		print("Casa: Maetell")
	elif (casa==lula):
		print("Casa: Greyjoy")
	elif (casa==esfolado):
		print("Casa: Bolton")
	elif (casa==turta):
		print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if (casa==lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 00:48:13) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
casa=input("brasao:")
print("Entrada:",casa)
if (casa=="lobo")or(casa=="leao")or(casa=="veado")or(casa=="dragao")or(casa=="rosa")or(casa=="sol")or(casa=="lula")or(casa=="esfolado")or(casa=="turta"):
	if (casa=="lobo"):
		print("Casa: Stark")
	elif (casa==leao):
		print("Casa: Lannister")
	elif (casa==veado):
		print("Casa: Baratheon")
	elif (casa==dragao):
		print("Casa: Targaryen")
	elif (casa==rosa):
		print("Casa: Tyrell")
	elif (casa==sol):
		print("Casa: Maetell")
	elif (casa==lula):
		print("Casa: Greyjoy")
	elif (casa==esfolado):
		print("Casa: Bolton")
	elif (casa==turta):
		print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    elif (casa==leao):
NameError: name 'leao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 00:49:04) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
casa=input("brasao:")
print("Entrada:",casa)
if (casa=="lobo")or(casa=="leao")or(casa=="veado")or(casa=="dragao")or(casa=="rosa")or(casa=="sol")or(casa=="lula")or(casa=="esfolado")or(casa=="turta"):
	if (casa=="lobo"):
		print("Casa: Stark")
	elif (casa=="leao"):
		print("Casa: Lannister")
	elif (casa=="veado"):
		print("Casa: Baratheon")
	elif (casa=="dragao"):
		print("Casa: Targaryen")
	elif (casa=="rosa"):
		print("Casa: Tyrell")
	elif (casa=="sol"):
		print("Casa: Maetell")
	elif (casa=="lula"):
		print("Casa: Greyjoy")
	elif (casa=="esfolado"):
		print("Casa: Bolton")
	elif (casa=="turta"):
		print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 00:49:10) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
casa=input("brasao:")
print("Entrada:",casa)
if (casa=="lobo")or(casa=="leao")or(casa=="veado")or(casa=="dragao")or(casa=="rosa")or(casa=="sol")or(casa=="lula")or(casa=="esfolado")or(casa=="turta"):
	if (casa=="lobo"):
		print("Casa: Stark")
	elif (casa=="leao"):
		print("Casa: Lannister")
	elif (casa=="veado"):
		print("Casa: Baratheon")
	elif (casa=="dragao"):
		print("Casa: Targaryen")
	elif (casa=="rosa"):
		print("Casa: Tyrell")
	elif (casa=="sol"):
		print("Casa: Maetell")
	elif (casa=="lula"):
		print("Casa: Greyjoy")
	elif (casa=="esfolado"):
		print("Casa: Bolton")
	elif (casa=="turta"):
		print("Casa: Tully")
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.139397
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:13:42) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
casa=input("brasao:")
print("Entrada:",casa)
if (casa=="lobo")or(casa=="leao")or(casa=="veado")or(casa=="dragao")or(casa=="rosa")or(casa=="sol")or(casa=="lula")or(casa=="esfolado")or(casa=="turta"):
	if (casa=="lobo"):
		print("Casa: Stark")
	elif (casa=="leao"):
		print("Casa: Lannister")
	elif (casa=="veado"):
		print("Casa: Baratheon")
	elif (casa=="dragao"):
		print("Casa: Targaryen")
	elif (casa=="rosa"):
		print("Casa: Tyrell")
	elif (casa=="sol"):
		print("Casa: Maetell")
	elif (casa=="lula"):
		print("Casa: Greyjoy")
	elif (casa=="esfolado"):
		print("Casa: Bolton")
	elif (casa=="turta"):
		print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:13:47) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
casa=input("brasao:")
print("Entrada:",casa)
if (casa=="lobo")or(casa=="leao")or(casa=="veado")or(casa=="dragao")or(casa=="rosa")or(casa=="sol")or(casa=="lula")or(casa=="esfolado")or(casa=="turta"):
	if (casa=="lobo"):
		print("Casa: Stark")
	elif (casa=="leao"):
		print("Casa: Lannister")
	elif (casa=="veado"):
		print("Casa: Baratheon")
	elif (casa=="dragao"):
		print("Casa: Targaryen")
	elif (casa=="rosa"):
		print("Casa: Tyrell")
	elif (casa=="sol"):
		print("Casa: Maetell")
	elif (casa=="lula"):
		print("Casa: Greyjoy")
	elif (casa=="esfolado"):
		print("Casa: Bolton")
	elif (casa=="turta"):
		print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 15:13:56) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
casa=input("brasao:")
print("Entrada:",casa)
if (casa=="lobo")or(casa=="leao")or(casa=="veado")or(casa=="dragao")or(casa=="rosa")or(casa=="sol")or(casa=="lula")or(casa=="esfolado")or(casa=="turta"):
	if (casa=="lobo"):
		print("Casa: Stark")
	elif (casa=="leao"):
		print("Casa: Lannister")
	elif (casa=="veado"):
		print("Casa: Baratheon")
	elif (casa=="dragao"):
		print("Casa: Targaryen")
	elif (casa=="rosa"):
		print("Casa: Tyrell")
	elif (casa=="sol"):
		print("Casa: Maetell")
	elif (casa=="lula"):
		print("Casa: Greyjoy")
	elif (casa=="esfolado"):
		print("Casa: Bolton")
	elif (casa=="turta"):
		print("Casa: Tully")
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.133033
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
